--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- ==========================
     	Fonts 
     =========================== -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lilita+One' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lilita+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   
 
     <!-- ==========================
@@ -113,7 +113,7 @@
               <div class="col-md-3 col-sm-4 scrollpoint sp-effect2"><!--Timeline-->
                  
                   <div class="timeline">
-                     <a href="http://www.unicamp.br/">
+                     <a href="https://www.unicamp.br/">
                         <div class="event">
                             <div class="event-info">
                                 <div class="date">2016-</div>
@@ -121,7 +121,7 @@
                             <span>{{text.lifeEvents[1]}}</span>
                         </div>
                      </a>
-                     <a href="http://www.utfpr.edu.br/">
+                     <a href="https://www.utfpr.edu.br/">
                         <div class="event">
                             <div class="event-info">
                                 <div class="date">2011<br>2015</div>
@@ -281,7 +281,7 @@
     <!-- ==========================
     	JS 
     =========================== -->
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
     <script src="js/creative-brands.js"></script>
     <script src="js/jquery.easy-pie-chart.js"></script>
