updating bio and timeline

--- a/index.html
+++ b/index.html
@@ -104,17 +104,46 @@
                 <div class="col-md-7 col-sm-6 scrollpoint sp-effect1"><!-- Profile description --> 
                 	<h3>Diogo Gonçalves</h3>
                   	<p class="about" ng-show="currentLang === 'en_US'"> 
-                          PhD. student in Computer Science at the University of Campinas (Unicamp), Brazil.  Master in Computer Science by UNICAMP and bachelor in Computer Science by Federal University of Technology - Parana (UTFPR). His research interests are related to performance evaluation of computer networks, distributed computing and data structures. Currently, I have experience in reliability of 5G Networks, resource management of Fog Computing, scalability of Mesh Network Protocols and development of Network Simulators. As a developer, I am interested in back-end development, specifically, local and cloud resource management, database management, and system administration on Linux platforms.
+                          PhD in Computer Science by the <a href="https://www.ic.unicamp.br/">University of Campinas (UNICAMP), Brazil</a>, with three months experience as visiting research student at <a href="https://www.cardiff.ac.uk/">Cardiff University, Wales, UK</a>, and six months experience at <a href="https://uwaterloo.ca/">University of Waterloo, Canada</a>. Master in Computer Science by UNICAMP and Bachelor in Computer Science by the <a href="https://www.utfpr.edu.br/">Federal University of Technology - Parana (UTFPR)</a>.
+                          As software engineer at <a href="https://www.tecgraf.puc-rio.br/">Tecgraf/PUC-Rio<a>, I work as C++ developer of V3O2, a software developed to <a href="https://petrobras.com.br/">oil company Petrobras</a> for visualisation, processing and analytics of sysmic data.
+                          My research interests are related to resource allocation and performance improvements of computer networks, distributed computing, and parallel computing problems. For 7 years, I was part of the InterSCity research group, developing open computer science solutions for smart city projects. My research focuses on parallel computing and HPC, Mixed Integer Linear Programming, Machine Learning, Graph Theory and Data
+Structures-based solutions.
                     </p>
                     <p class="about" ng-show="currentLang === 'pt_BR'"> 
-                          Aluno de doutorado em Ciência da Computação na Universidade Estadual de Campinas (Unicamp). Mestre em Ciência da Computação pela Unicamp e Bacharel em Ciência da Computação pela Universidade Tecnológica Federal do Paraná (UTFPR). Como pesquisador, possui interesse em avaliação de desempenho aplicado às áreas de redes, computação distribuída e estruturas de dados. Atualmente, tem experiência com pesquisas na área de confiabilidade de redes 5G, virtualização de rede e network slicing, gerenciamento de recursos em Nuvem e em Névoa, escalabilidade de protocolos de roteamento e desenvolvimento de simuladores de rede. Como desenvolvedor, possui interesse em desenvolvimento back end, mais especificamente, gerenciamento de recursos locais ou em Cloud, gerência de banco de dados e administração de sistemas em plataformas Linux.
+                         Doutor em Ciência da Computação pelo <a href="https://www.ic.unicamp.br/">Instituto de Computação da Universidade Estadual de Campinas (UNICAMP)</a> com estágio de pesquisa na <a href="https://uwaterloo.ca/">Universidade de Waterloo, Canada</a>, e <a href="https://www.cardiff.ac.uk/">Cardiff University, País de Gales, UK</a>. Mestre em Ciência da Computação pela UNICAMP e Bacharel em Ciência da Computação pela <a href="https://www.utfpr.edu.br/">Universidade Tecnológica Federal do Paraná (UTFPR)</a>.
+                         Como engenheiro de software do <a href="https://www.tecgraf.puc-rio.br/">Tecgraf/PUC-Rio</a>, atua no desenvolvimento do V3O2, um software desenvolvido para a <a href="https://petrobras.com.br/">Petrobras</a> para visualização, processamento e interpretação de dados sísmicos.
+                         Como pesquisador, desenvolve pesquisas na área de escalabilidade e gerência de recursos de computacionais em redes de computadores e em computação de alto desempenho. Possui interesse em avaliação de desempenho aplicado às áreas de redes, computação paralela e HPC, computação distribuída, estruturas de dados, inteligência atificial, programação linear e algoritmos em grafos.
                     </p>
                </div><!-- Profile description end--> 
                 
               <div class="col-md-3 col-sm-4 scrollpoint sp-effect2"><!--Timeline-->
                  
                   <div class="timeline">
+                  	<a href="https://www.tecgraf.puc-rio.br/">
+                        <div class="event">
+                            <div class="event-info">
+                                <div class="date">2024</div>
+                            </div>
+                            <span>{{text.lifeEvents[5]}}</span>
+                        </div>
+                     </a>
                      <a href="https://www.ic.unicamp.br/">
+                        <div class="event">
+                            <div class="event-info">
+                                <div class="date">2024</div>
+                            </div>
+                            <span>{{text.lifeEvents[4]}}</span>
+                        </div>
+                     </a>
+                     <a href="https://www.cardiff.ac.uk/">
+                        <div class="event">
+                            <div class="event-info">
+                                <div class="date">2023</div>
+                            </div>
+                            <span>{{text.lifeEvents[3]}}</span>
+                        </div>
+                     </a>
+                     <a href="https://uwaterloo.ca/">
                         <div class="event">
                             <div class="event-info">
                                 <div class="date">2019</div>
@@ -125,15 +154,7 @@
                      <a href="https://www.ic.unicamp.br/">
                         <div class="event">
                             <div class="event-info">
-                                <div class="date">2018-</div>
-                            </div>
-                            <span>{{text.lifeEvents[3]}}</span>
-                        </div>
-                     </a>
-                     <a href="https://www.ic.unicamp.br/">
-                        <div class="event">
-                            <div class="event-info">
-                                <div class="date">2016<br>2018</div>
+                                <div class="date">2018</div>
                             </div>
                             <span>{{text.lifeEvents[1]}}</span>
                         </div>
@@ -141,7 +162,7 @@
                      <a href="https://www.utfpr.edu.br/">
                         <div class="event">
                             <div class="event-info">
-                                <div class="date">2011<br>2015</div>
+                                <div class="date">2015</div>
                             </div>
                             <span>{{text.lifeEvents[0]}}</span>
                         </div> 
